@@ -31,7 +31,7 @@ if( !exists( ".DollarNames", envir = asNamespace("utils") ) ){
 	names <- c( 
 		.Call( "Descriptor__getMemberNames", x@pointer, PACKAGE = "RProtoBuf" ), 
 		"new(", "read(", "readASCII(", "fileDescriptor()", "name(",
-                "toString()", "as.character()",
+                "toString()", "as.character()", "asMessage()",
 		"containing_type()", "field_count()", "nested_type_count()", "enum_type_count", 
 		"field(", "nested_type(", "enum_type(" )
 	grep( pattern, names, value = TRUE )
@@ -64,7 +64,7 @@ if( !exists( ".DollarNames", envir = asNamespace("utils") ) ){
 		"fileDescriptor()", "containing_type()", 
 		"is_extension()", "number()", "type(", "cpp_type(", "label(", 
 		"is_repeated()", "is_required()", "is_optional()", 
-		"message_type()", "enum_type()",
+		"message_type()", "enum_type()", "asMessage()",
 		"has_default_value()", "default_value(",
 	)
 	grep( pattern, names, value = TRUE )
